provato v-for per stampare email

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <ul class="mail-list">
                 <!-- single mail -->
-                <li>
+                <li v-for="mail in mailList">
                     {{mailList}}
                 </li>
                 <!-- end single mail -->
