corretto e stampata lista

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="mail-list">
                 <!-- single mail -->
                 <li v-for="mail in mailList">
-                    {{mailList}}
+                    {{mail}}
                 </li>
                 <!-- end single mail -->
 
